--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,74 +1,74 @@
-name: 'Build wxWidgets App'
+name: Build and Release
 
 on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
+  release:
+    types: [created]
 
 jobs:
-  build:
+  build-and-release:
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
-            artifact_name: 'pril-editor-linux'
-            executable_name: 'pril-editor'
-          - os: windows-latest
-            artifact_name: 'pril-editor-windows'
-            executable_name: 'pril-editor.exe'
+            artifact_name: pril-editor
+            asset_name: pril-editor-linux.tar.gz
           - os: macos-latest
-            artifact_name: 'pril-editor-macos'
-            executable_name: 'pril-editor'
+            artifact_name: pril-editor
+            asset_name: pril-editor-macos.zip
+          - os: windows-latest
+            artifact_name: pril-editor.exe
+            asset_name: pril-editor-windows.zip
 
     steps:
-    - name: 'Checkout code'
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: 'Install wxWidgets (Linux)'
+    - name: Install wxWidgets (Linux)
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libwxgtk3.2-dev build-essential
+        sudo apt-get install -y libwxgtk3.2-dev build-essential make
 
-    - name: 'Install wxWidgets (Windows with MSYS2)'
-      if: matrix.os == 'windows-latest'
-      shell: msys2 {0}
-      run: |
-        # Update package databases and install the MinGW toolchain and wxWidgets
-        pacman -Syu --noconfirm
-        pacman -S --noconfirm --needed mingw-w64-x86_64-toolchain mingw-w64-x86_64-wxwidgets
-
-    - name: 'Install wxWidgets (macOS)'
+    - name: Install wxWidgets (macOS)
       if: matrix.os == 'macos-latest'
       run: brew install wxwidgets
 
-    - name: 'Compile Application (Linux/macOS)'
-      if: matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest'
-      run: |
-        # Use wx-config to get the correct compiler and linker flags
-        g++ Frame.cpp App.cpp `wx-config --cxxflags --libs` -o ${{ matrix.executable_name }}
-        
-    - name: 'Compile Application (Windows with MSYS2)'
+    - name: Install wxWidgets (Windows)
       if: matrix.os == 'windows-latest'
-      shell: msys2 {0}
-      run: |
-        # This command runs in the MSYS2 shell, where wx-config is available
-        g++ Frame.cpp App.cpp `wx-config --cxxflags --libs` -o ${{ matrix.executable_name }}
+      uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW64
+        update: true
+        install: >-
+          mingw-w64-x86_64-toolchain
+          mingw-w64-x86_64-wxwidgets
+          make
 
-    - name: 'Create Release Directory'
-      run: mkdir release
+    - name: Build application
+      shell: ${{ matrix.os == 'windows-latest' && 'msys2 {0}' || 'bash' }}
+      run: make
 
-    - name: 'Move Executable to Release Directory'
+    - name: Package artifact
       shell: bash
       run: |
-        # Use a bash shell for a consistent move command across all OSes
-        mv ${{ matrix.executable_name }} release/
+        # Create the asset package based on the OS
+        if [ "${{ matrix.os }}" == "windows-latest" ]; then
+          7z a ${{ matrix.asset_name }} ${{ matrix.artifact_name }}
+        elif [ "${{ matrix.os }}" == "macos-latest" ]; then
+          zip ${{ matrix.asset_name }} ${{ matrix.artifact_name }}
+        else
+          tar -czvf ${{ matrix.asset_name }} ${{ matrix.artifact_name }}
+        fi
 
-    - name: 'Upload Artifact'
-      uses: actions/upload-artifact@v4
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: ${{ matrix.artifact_name }}
-        path: release/
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ./${{ matrix.asset_name }}
+        asset_name: ${{ matrix.asset_name }}
+        asset_content_type: application/octet-stream
