--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,10 +50,10 @@ jobs:
         with:
           msystem: MINGW64
           update: true
-          install: >
+          install: |
             mingw-w64-x86_64-toolchain
+            mingw-w64-x86_64-make
             mingw-w64-x86_64-wxwidgets
-            make
 
       - name: Build on Linux
         if: matrix.os == 'ubuntu-latest'
