--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,12 @@ jobs:
             mingw-w64-x86_64-make
             mingw-w64-x86_64-wxwidgets
 
+      - name: Verify wxWidgets Installation (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: msys2 {0}
+        run: |
+          pacman -Qi mingw-w64-x86_64-wxwidgets || exit 1
+
       - name: Build on Linux
         if: matrix.os == 'ubuntu-latest'
         shell: bash
