--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,15 +44,14 @@ jobs:
         run: |
           brew install wxwidgets
 
-      - name: Setup MSYS2 + wxWidgets (Windows)
+      - name: Set up MSYS2
         if: matrix.os == 'windows-latest'
         uses: msys2/setup-msys2@v2
         with:
           msystem: MINGW64
           update: true
-          install: |
+          install: >-
             mingw-w64-x86_64-toolchain
-            mingw-w64-x86_64-make
             mingw-w64-x86_64-wxwidgets
 
       - name: Verify wxWidgets Installation (Windows)
